Refactor feedback executor initialization and shutdown
Improved FeedbackManager static initialization to avoid issues with Thread Builders and JVM context, using a basic ThreadFactory for executor threads. Added robust shutdown hook registration with error handling. Updated ServerEventHandler comments and cleanup logic for clarity.